--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "@sailpoint/source",
+  "name": "test-project",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "api:test": "nx run api:test",
+    "api": "nx run api:serve:development",
+    "start": "nx run-many --target=serve --projects=api,ui",
+    "test": "nx run-many --target=test --projects=api,ui",
+    "e2e": "nx run ui-e2e:e2e-ci"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.0.0",
@@ -13,7 +19,15 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "@ngrx/operators": "^18.0.0",
+    "@ngrx/signals": "^18.0.0-rc.1",
     "@nx/angular": "19.3.0",
+    "axios": "^1.6.0",
+    "fs": "^0.0.1-security",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,12 +42,17 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "19.3.0",
     "@nx/eslint": "19.3.0",
     "@nx/eslint-plugin": "19.3.0",
     "@nx/jest": "19.3.0",
-    "@nx/js": "19.3.0",
+    "@nx/js": "^19.3.0",
+    "@nx/nest": "^19.3.0",
+    "@nx/node": "19.3.0",
     "@nx/web": "19.3.0",
+    "@nx/webpack": "19.3.0",
     "@nx/workspace": "19.3.0",
     "@schematics/angular": "~18.0.0",
     "@swc-node/register": "~1.9.1",
@@ -50,11 +69,14 @@
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
+    "mock-fs": "^5.2.0",
     "nx": "19.3.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "webpack-cli": "^5.1.4"
   }
 }
